--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Atlases'
 - !lcc 'G'
+- GITenberg
 title: "Alden's Handy Atlas of the World\r\nIncluding One Hundred and Thirty-eight\
   \ Colored Maps, Diagrams, Tables, Etc."
 url: http://www.gutenberg.org/ebooks/38457
